# zhuomianling

./: .gitignore  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  pet.html  start-timed.cmd  tsconfig.electron.json  tsconfig.json  vite.config.ts
config/examples/: ai.example.json  gpt-sovits.example.yaml  pet.example.json  speech.example.json  tts.example.json
docs/: ai-output-compatibility-baseline.md  mood-system-design.md  resource-policy.md  user-guide.md
docs/adr/: 0001-memory-ledger-sqlite.md  0002-local-chinese-memory-retrieval.md
docs/archive/: memory-system-implementation-history.md
public/live2d/: README.md
scripts/: clean-electron-output.mjs  export-bge-int8.py  measure-memory-sidecar.cjs  prepare-memory-runtime.mjs  prepare-memory-runtime.ps1  probe-electron-sqlite.cjs  release-asset-policy.d.ts  release-asset-policy.mjs  startup-timing.ps1  verify-memory-runtime.mjs  verify-packed-assets.mjs  verify-release-assets.mjs
sidecar/memory/: pylock.toml  pyproject.toml
sidecar/memory/desktop_pet_memory_sidecar/: __init__.py  __main__.py  build_backend.py  embedding_runtime.py  memu_backend.py  protocol.py  service.py  service_pool.py
sidecar/memory/tests/: test_bge_embedding.py  test_memu_backend.py  test_protocol.py  test_sidecar_integration.py
sidecar/memory/tests/fixtures/: chinese_recall_cases.json  fake_protocol_sidecar.py
src/main/: appIcon.ts  index.ts  ipc.ts  ipcAccess.test.ts  ipcAccess.ts  ipcValidation.test.ts  ipcValidation.ts  petWindow.test.ts  petWindow.ts  preloadSurface.test.ts  startupProfiler.test.ts  (+5 more)
(+240 files in other folders)
